# rust-fltk

./: Cargo.toml  README.md  config.json
Myapp.AppDir/usr/: thumbnailer.sh
src/: main.rs  main2.txt  main3.rs  refresh.rs  thumbnailer.sh
thumbnailer/: Cargo.toml  refresh_icon.rs  thumbnailer.sh
thumbnailer/src/: main.rs
