[package]
name = "appimage-launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
#rand = "0.8.5"
#fltk-flex = "0.2"
#run_script = "0.10.1"
#fork = "0.1.22"

fltk = { version = "1.4.4", features = ["fltk-bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#once_cell = "1.18.0"
lazy_static = "1.4.0"


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
